# json-schema-to-luau

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: basic.rs
src/: converter.rs  error.rs  lib.rs  main.rs  schema.rs
test/: integration_test.rs
tests/: README.md  expected_output.luau  integration_test.rs  test_schema.json
