[package]
name = "json-schema-to-luau"
version = "1.0.3"
edition = "2024"
authors = ["Amir Farzamnia <amirfarzamnia@proton.me>"]
license = "MIT"
description = "Convert JSON Schema to Luau type definitions with full support for constraints and advanced schema features."
repository = "https://github.com/amirfarzamnia/json-schema-to-luau"
keywords = [
    "schema",
    "json",
    "openapi",
    "jsonschema",
    "luau",
    "type-generation",
    "codegen",
]
categories = ["development-tools", "parser-implementations"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
clap = { version = "4.5", features = ["derive"] }
convert_case = "0.10.0"

[[bin]]
name = "json-schema-to-luau"
path = "src/main.rs"

[lib]
name = "json_schema_to_luau"
path = "src/lib.rs"
